@@ -358,16 +358,6 @@
    &lt;BEGIN&gt;&amp;lt;style&amp;gt;&lt;/BEGIN&gt;
    &lt;END&gt;&amp;lt;/style&amp;gt;&lt;/END&gt;
 &lt;/SPAN&gt;</programlisting>
-   <tip>
-    <para>
-     The <literal>&lt;END&gt;</literal> tag is optional. If it is not specified,
-     any occurrence of the start string will cause the remainder of the buffer
-     to be highlighted with this rule.
-    </para>
-    <para>
-     This can be very useful when combined with delegation.
-    </para>
-   </tip>
   </sect2>
   <sect2 id="mode-rule-eol-span"><title>The EOL_SPAN Rule</title>
    <para>
@@ -482,7 +472,7 @@
     end tags. For example, the following rule highlights the most common Java
     keywords:
    </para>
-   <programlisting>&lt;KEYWORDS IGNORE_CASE="FALSE"&gt;
+   <programlisting>&lt;KEYWORDS&gt;
    &lt;KEYWORD1&gt;if&lt;/KEYWORD1&gt;
    &lt;KEYWORD1&gt;else&lt;/KEYWORD1&gt;
    &lt;KEYWORD3&gt;int&lt;/KEYWORD3&gt;
@@ -527,5 +517,32 @@
    </para></listitem>
    </itemizedlist>
   </sect2>
+ </sect1>
+ <sect1 id="updating-modes-41"><title>Updating Edit Modes for jEdit 4.1</title>
+  <para>
+   In jEdit 4.1, the mode file grammar has been cleaned up somewhat. As a result, some
+   edit modes written for jEdit 4.0 and earlier need to be updated:
+  </para>
+  <itemizedlist>
+   <listitem>
+    <para>
+     The <literal>&lt;KEYWORDS&gt;</literal> tag no longer accepts an
+     <literal>IGNORE_CASE</literal> attribute.
+     Set the <literal>IGNORE_CASE</literal> attribute of the
+     <literal>&lt;RULES&gt;</literal> tag instead.
+    </para>
+   </listitem>
+   <listitem>
+    <para>
+     The <literal>&lt;END&gt;</literal> tag of the <literal>&lt;SPAN&gt;</literal> rule
+     used to be optional, in which case
+     any occurrence of the start string would cause the remainder of the buffer
+     to be highlighted with the span. In jEdit 4.1, the <literal>&lt;END&gt;</literal>
+     tag can no longer be omitted, however
+     a <literal>&lt;SEQ&gt;</literal> tag with a <literal>DELEGATE</literal> attribute
+     can be used to achieve the same effect as endless span.
+    </para>
+   </listitem>
+  </itemizedlist>
  </sect1>
 </chapter>
