@@ -640,8 +640,9 @@ public class SearchDialog extends EnhancedDialog implements EBComponent
 			&& !searchSelection.isSelected());
 
 		boolean reverseEnabled = !hyperSearch.isSelected()
-			&& searchCurrentBuffer.isSelected();
-		searchBack.setEnabled(reverseEnabled && !regexp.isSelected());
+			&& searchCurrentBuffer.isSelected()
+			&& !regexp.isSelected();
+		searchBack.setEnabled(reverseEnabled);
 		searchForward.setEnabled(reverseEnabled);
 		if(!reverseEnabled)
 			searchForward.setSelected(true);
